# aecs

./: Cargo.toml
benches/: ecs_benchmark.rs
src/: archetype.rs  component_vec.rs  lib.rs  tests.rs  type_graph.rs
